# 003_streamlit_split_and_summarize

./: README.md  main.py  pyproject.toml  pyproject.toml.bak  requirements.txt  runtime.txt
