[tool.poetry]
name = "003_streamlit_split_and_summarize_simulado"
version = "1.0.0"
description = "AI app simulada para resumir PDFs sin usar OpenAI"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
packages = []          # <-- vacía para que no intente instalar el proyecto
# package-mode false desactiva el modo paquete en algunas versiones de Poetry
# (opcional según versión)
# package-mode = false  

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.37.0"
PyPDF2 = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"



