[tool.poetry]
name = "003_streamlit_split_and_summarize"
version = "1.0.0"
description = "App de resumen de PDFs con OpenAI (real o simulado)"
authors = ["Tu Nombre <tu@email.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.0"
PyPDF2 = "^3.0.1"
openai = "^1.0.0"
tiktoken = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
